--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 .App-logo {
@@ -35,4 +37,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.HomePageLayout{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  flex-shrink: 0; 
+}
+
+.HomePageLogo{
+  width: 100%;
+  margin-bottom: 10%;
+}
+
+.HomePageDesc{
+  width: 100%;
+  margin-bottom: 2%;
 }
