--- a/src/CSS/DivisionDetails.css
+++ b/src/CSS/DivisionDetails.css
@@ -4,7 +4,7 @@
 }
   
 
-.playerName{
+.playerName1{
     height: 75px;
     width: 300px;
     display: flex;
@@ -12,65 +12,62 @@
     align-items: center;
     
 }
-.teamName{
+.teamName1{
     height: 75px;
-    width: 300px;
+    width: 275px;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: white;
   
 }
 
-.jerseyNumber{
+.jerseyNumber1{
     height: 50px;
     width: 50px;
     position: absolute;
   
 }
 
-.jerseyNumber, .teamName,.playerName, .teamImage{
-    background-color: #006478;
+.jerseyNumber1, .teamName1,.playerName1, .teamImage1{
+    background-color: #000000;
 }
 
-.playerFont, .teamFont, .jerseyFont{
+.playerFont1, .teamFont1, .jerseyFont1{
     font-family: kabel;
    margin: 0%;
     font-size: 30px;
     color: white;
 }
 
-.teamFont{
+.teamFont1{
     position: relative;
 }
 
-.playerImage{
+.playerImage1{
     height: 400px;
     width: 400px;
-    
-    
+    position: absolute;
+    z-index: -1;
 }
 
-.teamImage{
+.teamImage1{
     height: 150px;
-    width: 100px;
+    width: 125px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #000000;
 }
 
-.teamImgTag{
-    height: 100px;
-    width: 100px;
-}
-
-.playerImgTag{
-    max-width: 100%;
-    max-height: 100%;
-    
+.teamImgTag1{
+    height: 150px;
+    width: 125px;
+    background-color: transparent;
 }
 
 
-.cardLayout{
+.cardLayout1{
     height: 550px;
     width: 400px;
     margin-left: 100px;
@@ -80,20 +77,21 @@
     flex-direction: column;
 }
 
-.ImageJersey{
+.RankingDiv1{
     height: 400px;
     width: 400px;
     position: relative;
-    background-color: transparent;
+    background-color: white;
+    z-index: 0;
 }
 
-.TeamPlayerImage{
+.TeamPlayerImage1{
     height: 150px;
     width: 400px;
     display: flex;
     flex-direction: row;
 }
-.TeamPlayerInfo{
+.TeamPlayerInfo1{
     height: 150px;
     width: 300px;
     display: flex;
