--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -5,7 +5,8 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-content: center;
-   
+    background: rgb(255,255,255);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 64%, rgba(133,221,238,1) 100%);    
 }
 
 .DataContent, .SearchContent{
