--- a/src/CSS/SearchResult.css
+++ b/src/CSS/SearchResult.css
@@ -1,4 +1,27 @@
 .ListHeader{
-    font-size: large;
+    font-size: 25px;
+   
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
+
+.ListHeaderDiv{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+.CloseTeam:hover{
+    color: #1ae8c9;
+}
+
+.PlayerListContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
