Added changes for responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -42,9 +42,16 @@
 }
 
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 620px){
   .App{
     overflow-y: scroll;
   }
 }
+
+@media screen and (max-height: 814px){
+  .App{
+    overflow-y: scroll;
+  }
+}
+
 
