--- a/src/CSS/Instruction.css
+++ b/src/CSS/Instruction.css
@@ -1,30 +1,35 @@
 .Instruction-Container{
  display: flex;
+ height: 100%;
  flex-direction: column;
  align-items: center;
- width: max-content;
+ width: 100%;
+}
+
+.Instruction-Container-Mobile{
+    display: none;
 }
 
 .Upper-Instruction-Wording{
     color: #9a9c9a;
-    font-size: 25px;
+    font-size: 1.5em;
 }
 
 .Lower-Instruction-Wording{
     color: #9a9c9a;
-    font-size: 25px;
+    font-size: 1.5em;
 }
 
 .Upper-Instruction-Wording-Container{
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 50%;
 }
 
 .Lower-Instruction-Wording-Container{
     display: flex;
     flex-direction: row;
-    width: 30%;
+    width: 50%;
 }
 
 .Upper-Arrow-SVG{
@@ -39,4 +44,53 @@
     display: flex;
     flex-direction: row;
     
+}
+
+@media screen and (max-width:620px){
+    .Instruction-Container-Mobile{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: max-content;
+        color: #9a9c9a;
+        margin: 0 0 0 15%;
+    }
+
+    .Instruction-Container-Mobile span{
+        color: #9a9c9a;
+        font-size: 1.5em;
+    }
+    .Instruction-Text-Div{
+        width: 75vw;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        margin: 5% 0 5% 0;
+    }
+    .Text-Number{
+        font-size: 3em;
+        font-weight: 700;
+    }
+    .Instruction-Container{
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 1010px) and (max-height: 710px){
+    .Upper-Instruction-Wording-Container{
+        width: 50%;
+    }
+
+    .Lower-Instruction-Wording-Container{
+        width: 50%;
+    }
+    .Upper-Instruction-Wording{
+        font-size: 1.25em;
+    }
+
+    .Lower-Instruction-Wording{
+        font-size: 1.25em;
+    }
 }
