--- a/src/CSS/LandingPage.css
+++ b/src/CSS/LandingPage.css
@@ -7,7 +7,7 @@
 }
 
 .Stats-Standings-Container{
-    height: 90%;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -26,10 +26,12 @@
 }
 
 .Team-Select-Container{
-    height: 75%;
+    height: 90%;
     width: 10%;
     overflow-y: scroll;
     scrollbar-width: none;
+    margin: 0 0 2.5% 0;
+    
     
 }
 
@@ -38,9 +40,9 @@
     background: transparent; /* make scrollbar transparent */
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 620px){
     .Landing-Page-Container{
-        min-height: 100%;
+        height: min-content;
     }
     .Stats-Standings-Container{
         flex-direction: column;
@@ -59,7 +61,7 @@
     
     .Team-Select-Container{
         width: 100%;
-        height:25%;
+        height: 85%;
         scrollbar-width: none;
         overflow-x: scroll;
         overflow-y:hidden;
@@ -67,3 +69,5 @@
     }
 
     }
+
+    
