--- a/src/CSS/LeaderStats.css
+++ b/src/CSS/LeaderStats.css
@@ -13,7 +13,7 @@
 
 .Player-Stats-Row{
     color:white;
-    font-size: 20px;
+    font-size: 1.25em;
     
 }
 
@@ -38,19 +38,21 @@
 
 .Name{
   float: inline-start;
+  margin: 0 1.5% 0 1.5%;
 }
 
 
 .Player-Stats-Row-Active{
     color:white;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 1.25em;
     
 }
 
 .Individual-Stats-Container{
     width: 50%;
-    height: 100%;;
+    height: 100%;
+    margin: 5% 0 0 0;
 }
 
 .Total-Stats-Container{
@@ -113,7 +115,7 @@
 
 .Jersey-Number{
     margin: 0;
-    font-size: 35px;
+    font-size: 2em;
     color: white;
     float: right;
 }
@@ -132,7 +134,7 @@
     align-items: flex-start;
     padding-left: 2.5%;
     justify-content: center;
-    font-size: 25px;
+    font-size: 1.5em;
     color: white;
     border-left: 1px solid grey;
 }
@@ -152,14 +154,14 @@
 
 .Team-Name{
     margin: 0;
-    font-size: 15px;
+    font-size: 1em;
     color: white;
     float: right;
 }
 
 .Position{
     margin: 0;
-    font-size: 15px;
+    font-size: 1em;
     color: white;
     float: left;
 }
@@ -174,18 +176,73 @@
 }
 
 .Stat-Type{
-    font-size: 15px;
+    font-size: 1em;
     color: white;
     
 }
 
 .Stat-Value{
-    font-size: 45px;
+    font-size: 3em;
     color: white;
     font-weight: 800;
 }
+@media screen and (max-width: 1200px){
+    .Player-Stats-Row{
+        font-size: 1.05em;
+    }
 
-@media screen and (max-width: 500px){
+    .Player-Stats-Row-Active{
+        font-size: 1.05em;
+    }
+}
+@media screen and (max-width: 1010px){
+    .Player-Stats-Row{
+        font-size: 1em;
+    }
+
+    .Player-Stats-Row-Active{
+        font-size: 1em;
+    }
+}
+@media screen and (max-width: 970px){
+    .Player-Stats-Row{
+        font-size: 0.9em;
+    }
+
+    .Player-Stats-Row-Active{
+        font-size: 0.9em;
+    }
+    .Jersey-Number{
+        font-size: 1em;
+    }
+    .Team-Name{
+        font-size: 0.75em;
+
+    }
+    
+    .Position{
+        font-size: 0.75em;
+    }
+    .Stat-Type{
+        font-size: 0.75em;
+    }
+    
+    .Stat-Value{
+        font-size: 2em;
+    }
+    .Player-Name-Container{
+        font-size: 1em;
+    }
+    .Jersey-Number-Container{
+        width: min-content;
+    }
+    .Individual-Stats-Container{
+        padding: 0;
+    }
+}
+
+
+@media screen and (max-width: 650px){
     .Total-Stats-Container{
         overflow: hidden;
         overflow-y: scroll;
@@ -196,7 +253,50 @@
     }
 
     .Player-Stats-Row{
-        font-size: 17.5px;
+        font-size: 1em;
+    }
+
+    .Player-Stats-Row-Active{
+        font-size: 1em;
     }
     
+}
+
+@media screen and (max-width: 420px){
+    .Player-Stats-Row{
+        font-size: 0.75em;
+    }
+
+    .Player-Stats-Row-Active{
+        font-size: 0.75em;
+        
+        
+    }
+    .Jersey-Number{
+        font-size: 1em;
+    }
+    .Team-Name{
+        font-size: 0.75em;
+
+    }
+    
+    .Position{
+        font-size: 0.75em;
+    }
+    .Stat-Type{
+        font-size: 0.75em;
+    }
+    
+    .Stat-Value{
+        font-size: 2em;
+    }
+    .Player-Name-Container{
+        font-size: 1em;
+    }
+    .Jersey-Number-Container{
+        width: min-content;
+    }
+    .Individual-Stats-Container{
+        padding: 0;
+    }
 }
