--- a/src/CSS/TeamStandings.css
+++ b/src/CSS/TeamStandings.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: stretch;
-    height: 100%;
+    height: min-content;
     background-color:#242526;
 }
 
@@ -14,7 +14,7 @@
 }
 
 .Division-Container{
-    height: 10%;
+    height: 8%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -22,7 +22,8 @@
 }
 
 .Standings-Table{
-    height: 50%;
+    height: max-content;
+    width: 100%;
     display: flex;
     flex-direction: column;
     color: white;
@@ -30,6 +31,71 @@
     border-bottom: 1px solid white;
     margin-top: 2%;
     margin-bottom: 1%;
+    overflow-x: auto;
+    flex:none;
+    
+}
+
+.Standings-Row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    flex: none;
+    
+}
+
+.Standings-Data{
+    /* min-width: 12%;
+    max-width: 12%; */
+    width: 62px;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex: none;
+    margin: 0% 0.5% 1.5% 0.5%;
+}
+
+.Standings-Data-Team{
+    margin: 0% 0.5% 1.5% 0.5%;
+    /* max-width: 15%; */
+    /* min-width: 15%; */
+    width: 83px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex: none;
+    height: fit-content;
+    font-size: 0.8em;
+}
+.Standings-Data-Title{
+    margin: 0% 0.5% 1.5% 0.5%;
+    /* min-width: 12%;
+    max-width: 12%; */
+    width: 62px;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex: none;
+    font-weight: 700;
+}
+.Standings-Data-Team-Title{
+    margin: 0% 0.5% 1.5% 0.5%;
+    /* min-width: 15%;
+    max-width: 15%; */
+    width: 83px;;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex: none;
+    height: fit-content;
+    font-weight: 700;
 }
 
 .H1-TeamStandings{
@@ -96,7 +162,7 @@ table{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 2%;
+    margin-top:0;
     
 }
 
@@ -143,4 +209,31 @@ table{
     color: white;
     font-size: 12px;
     float: left;
+}
+
+@media screen and (min-width: 1600px){
+    .Standings-Data-Title{
+        width: 72px;
+        font-size: 1.25em;
+    }
+    .Standings-Data{
+        width: 72px;
+        font-size: 1.25em;
+    }
+    .Standings-Data-Team{
+        font-size: 1em;
+    }
+}
+@media screen and (min-width: 1800px){
+    .Standings-Data-Title{
+        width: 82px;
+        font-size: 1.25em;
+    }
+    .Standings-Data{
+        width: 82px;
+        font-size: 1.25em;
+    }
+    .Standings-Data-Team{
+        font-size: 1em;
+    }
 }
