--- a/src/CSS/LeaderStats.css
+++ b/src/CSS/LeaderStats.css
@@ -13,7 +13,7 @@
 
 .Player-Stats-Row{
     color:white;
-    font-size: 1.25em;
+    font-size: clamp(0.75rem, 0.5000rem + 1.2500vw, 4.5rem);
     
 }
 
@@ -45,14 +45,14 @@
 .Player-Stats-Row-Active{
     color:white;
     font-weight: 700;
-    font-size: 1.25em;
+    font-size: clamp(0.75rem, 0.5000rem + 1.2500vw, 4.5rem);
     
 }
 
 .Individual-Stats-Container{
     width: 50%;
     height: 100%;
-    margin: 5% 0 0 0;
+    margin: 5% 10% 0 0;
 }
 
 .Total-Stats-Container{
@@ -97,7 +97,6 @@
 .Individual-Value-Container{
     width: 100%;
     height: 15%;
-    width: 100%;
     height: min-content;
     display: flex;
     flex-direction: row;
@@ -115,7 +114,7 @@
 
 .Jersey-Number{
     margin: 0;
-    font-size: 2em;
+    font-size: clamp(2rem, 1.7333rem + 1.3333vw, 6rem);
     color: white;
     float: right;
 }
@@ -134,9 +133,10 @@
     align-items: flex-start;
     padding-left: 2.5%;
     justify-content: center;
-    font-size: 1.5em;
+    font-size: clamp(1rem, 0.8000rem + 1.0000vw, 4rem);
     color: white;
     border-left: 1px solid grey;
+    cursor: pointer;
 }
 
 .Team-Name-Container{
@@ -154,14 +154,15 @@
 
 .Team-Name{
     margin: 0;
-    font-size: 1em;
+    font-size: clamp(0.75rem, 0.6000rem + 0.7500vw, 3rem);
     color: white;
     float: right;
+    
 }
 
 .Position{
     margin: 0;
-    font-size: 1em;
+    font-size: clamp(0.75rem, 0.6000rem + 0.7500vw, 3rem);
     color: white;
     float: left;
 }
@@ -176,63 +177,25 @@
 }
 
 .Stat-Type{
-    font-size: 1em;
+    font-size: clamp(0.75rem, 0.6000rem + 0.7500vw, 3rem);
     color: white;
     
 }
 
 .Stat-Value{
-    font-size: 3em;
+    font-size: clamp(2rem, 1.7333rem + 1.3333vw, 6rem);
     color: white;
     font-weight: 800;
 }
-@media screen and (max-width: 1200px){
-    .Player-Stats-Row{
-        font-size: 1.05em;
-    }
 
-    .Player-Stats-Row-Active{
-        font-size: 1.05em;
+@media screen and (max-width: 1000px){
+    .Player-Stats-Row-Name-Div{
+        width: 50%;
     }
-}
-@media screen and (max-width: 1010px){
-    .Player-Stats-Row{
-        font-size: 1em;
-    }
-
-    .Player-Stats-Row-Active{
-        font-size: 1em;
-    }
+   
 }
 @media screen and (max-width: 970px){
-    .Player-Stats-Row{
-        font-size: 0.9em;
-    }
-
-    .Player-Stats-Row-Active{
-        font-size: 0.9em;
-    }
-    .Jersey-Number{
-        font-size: 1em;
-    }
-    .Team-Name{
-        font-size: 0.75em;
-
-    }
     
-    .Position{
-        font-size: 0.75em;
-    }
-    .Stat-Type{
-        font-size: 0.75em;
-    }
-    
-    .Stat-Value{
-        font-size: 2em;
-    }
-    .Player-Name-Container{
-        font-size: 1em;
-    }
     .Jersey-Number-Container{
         width: min-content;
     }
@@ -242,7 +205,7 @@
 }
 
 
-@media screen and (max-width: 650px){
+@media screen and (max-width: 730px){
     .Total-Stats-Container{
         overflow: hidden;
         overflow-y: scroll;
@@ -252,47 +215,11 @@
         padding: 0 5% 0 0 ;
     }
 
-    .Player-Stats-Row{
-        font-size: 1em;
-    }
-
-    .Player-Stats-Row-Active{
-        font-size: 1em;
-    }
     
 }
 
 @media screen and (max-width: 420px){
-    .Player-Stats-Row{
-        font-size: 0.75em;
-    }
-
-    .Player-Stats-Row-Active{
-        font-size: 0.75em;
-        
-        
-    }
-    .Jersey-Number{
-        font-size: 1em;
-    }
-    .Team-Name{
-        font-size: 0.75em;
-
-    }
     
-    .Position{
-        font-size: 0.75em;
-    }
-    .Stat-Type{
-        font-size: 0.75em;
-    }
-    
-    .Stat-Value{
-        font-size: 2em;
-    }
-    .Player-Name-Container{
-        font-size: 1em;
-    }
     .Jersey-Number-Container{
         width: min-content;
     }
