--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   text-align: center;
   height: 100vh;
   width: 100vw;
-  background-color: #18191A;
+  background-color: var(--background-colour);
 }
 
 .App-logo {
