--- a/src/CSS/AdditionalStatsPage.css
+++ b/src/CSS/AdditionalStatsPage.css
@@ -1,5 +1,5 @@
 .Additional-Stats-Page-Container{
-    background-color: #18191A;
+    background-color: var(--background-colour);
     height: 100vh;
     width: 100vw;
     overflow:auto;
@@ -25,15 +25,15 @@
     justify-content: center;
     align-items: center;
     flex: 0 0 auto;
-    background-color: #242526;
+    background-color: var(--accent-color);
     margin-right: 1%;
     margin-left: 1%;
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid var(--separator-color);
 }
 .Lower-Container{
     height: 40%;
     width: 98%;
-    background-color: #242526;
+    background-color: var(--accent-color);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -75,8 +75,8 @@
     justify-content: flex-end;
     margin-left: 1%;
     margin-right: 1%;
-    background-color: #242526;
-    border-bottom: 1px solid grey;
+    background-color: var(--accent-color);
+    border-bottom: 1px solid var(--separator-color);
 }
 
 .Name-Container{
@@ -91,7 +91,8 @@
 .Name-Container span{
     font-size: clamp(1.5rem, 1.0597rem + 2.0126vw, 7.5rem);
     margin-right: 2%;
-    color: white;
+    color: var(--text-color);
+    opacity: var(--text-opacity);
 }
 
 .Extra-Stats-Container{
@@ -112,11 +113,12 @@
     font-size: clamp(0.65rem, 0.3308rem + 1.4591vw, 5rem);
     margin-top: 1%;
     margin-right: 2%;
-    color: white;
+    color: var(--text-color);
+    opacity: var(--text-opacity);
 }
 
 .Span-Seperator{
-    border-right: 3px solid grey;
+    border-right: 3px solid var(--separator-color);
     padding-right: 1%;
 }
 
@@ -139,7 +141,8 @@
     justify-content: center;
     gap: 10px;
     font-weight: 700;
-    color:white;
+    color:var(--text-color);
+    opacity: var(--text-opacity);
     margin-right: 5%;
     font-size: clamp(0.65rem, 0.3933rem + 1.2833vw, 4.5rem);
 }
@@ -150,7 +153,8 @@
     align-items: flex-start;
     justify-content: center;
     gap: 10px;
-    color: white;
+    color: var(--text-color);
+    opacity: var(--text-opacity);
     font-size: clamp(0.65rem, 0.3933rem + 1.2833vw, 4.5rem);
 }
 .Last-Games-Title-Container{
@@ -162,7 +166,8 @@
 }
 .Last-Games-Title{
     
-    color: white;
+    color: var(--text-color);
+    opacity: var(--text-opacity);
     font-size: 1.5em;
     font-weight: 700;
     
@@ -172,6 +177,10 @@
     width: 100%;
     height: fit-content;
     margin-bottom: 2%;
+    overflow-x: scroll;
+    overscroll-behavior-y: none;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* IE 10+ */
 }
 
 @media screen and (max-width: 1100px){
@@ -193,7 +202,8 @@
     .Extra-Stats-Container-Mobile span{
         font-size: clamp(0.65rem, 0.3308rem + 1.4591vw, 5rem);
         margin-right: 2%;
-        color: white;
+        color: var(--text-color);
+        opacity: var(--text-opacity);
     }
 
     .Additional-Details{
