--- a/src/CSS/Instruction.css
+++ b/src/CSS/Instruction.css
@@ -11,12 +11,14 @@
 }
 
 .Upper-Instruction-Wording{
-    color: #9a9c9a;
+    color: var(--instruction-color);
+    opacity: var(--text-opacity);
     font-size: 1.5em;
 }
 
 .Lower-Instruction-Wording{
-    color: #9a9c9a;
+    color: var(--instruction-color);
+    opacity: var(--text-opacity);
     font-size: 1.5em;
 }
 
@@ -52,12 +54,13 @@
         flex-direction: column;
         align-items: center;
         width: max-content;
-        color: #9a9c9a;
+        color: var(--instruction-color);
+        opacity: var(--text-opacity);
         margin: 0 0 0 15%;
     }
 
     .Instruction-Container-Mobile span{
-        color: #9a9c9a;
+        color: var(--instruction-color);
         font-size: 1.5em;
     }
     .Instruction-Text-Div{
