--- a/src/CSS/LandingPage.css
+++ b/src/CSS/LandingPage.css
@@ -63,9 +63,11 @@
     .Team-Select-Container{
         width: 100%;
         height: 85%;
-        scrollbar-width: none;
         overflow-x: scroll;
         overflow-y:hidden;
+        overscroll-behavior-y: none;
+        scrollbar-width: none; /* Firefox */
+        -ms-overflow-style: none;  /* IE 10+ */
         
     }
 
