--- a/src/CSS/LeagueLeaders.css
+++ b/src/CSS/LeagueLeaders.css
@@ -18,13 +18,14 @@
 }
 
 .Leaders-Title h1 {
-    color: white;
+    color: var(--text-color);
     font-weight: bolder;
     margin: 0;
+    opacity: var(--text-opacity);
 }
 
 .Leaders-Title:focus-within{
-    border: 1px solid grey;
+    border: 1px solid var(--separator-color);
 }
 
 .Leaders-Selection-Container{
@@ -35,12 +36,12 @@
     justify-content: flex-start;
     align-items: flex-end;
     flex-grow: 1;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid var(--separator-color);
     /* padding-bottom: 1.3%; */
 }
 
 .Leaders-Selection-Container:focus-within{
-    border: 1px solid grey;
+    border: 1px solid var(--separator-color);
 }
 
 .Leaders-Stats-Container{
@@ -67,7 +68,8 @@
 
 
 .Stat-Select-1, .Stat-Select-2, .Stat-Select-3{
-    color: white;
+    color: var(--text-color);
+    opacity: var(--text-opacity);
     margin: 2.5% 0 0 5%;
     font-size: 1.25em;
     font-weight: 600;
@@ -94,7 +96,8 @@
 .Player-Position-Type{
     font-size: 2em;
     font-weight: 700;
-    color: white;
+    color: var(--text-color);
+    opacity: var(--text-opacity);
 }
 
 @media screen and (max-width: 730px){
