--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+@font-face {
+  font-family: 'PTFont';
+  src: local('PTFont'), url(./Assets/PT-Root-UI_Regular.ttf) format('truetype');
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: PTFont, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
