--- a/src/CSS/AdditionalStatsPage.css
+++ b/src/CSS/AdditionalStatsPage.css
@@ -49,8 +49,8 @@
 }
 
 .Profile-Placeholder{
-    height: 250px;
-    width:  250px;
+    height: clamp(10rem, 8.5714rem + 7.1429vw, 20rem);
+    width:  clamp(10rem, 8.5714rem + 7.1429vw, 20rem);
     position: absolute;
     border-radius: 50%;    
     background-color: black;
@@ -68,7 +68,7 @@
 }
 
 .Stats-Bar{
-    height: 175px;
+    height: clamp(10rem, 7.8571rem + 10.7143vw, 25rem);
     display: flex;
     flex-direction:column;
     align-items: center;
