--- a/src/CSS/LeagueLeaders.css
+++ b/src/CSS/LeagueLeaders.css
@@ -24,9 +24,9 @@
     opacity: var(--text-opacity);
 }
 
-.Leaders-Title:focus-within{
+/* .Leaders-Title:focus-within{
     border: 1px solid var(--separator-color);
-}
+} */
 
 .Leaders-Selection-Container{
     height: max-content;
@@ -40,9 +40,9 @@
     /* padding-bottom: 1.3%; */
 }
 
-.Leaders-Selection-Container:focus-within{
+/* .Leaders-Selection-Container:focus-within{
     border: 1px solid var(--separator-color);
-}
+} */
 
 .Leaders-Stats-Container{
     height: max-content;
@@ -56,7 +56,7 @@
 }
 
 .toggleArrowLeft, .toggleArrowRight {
-    
+    color: var(--text-color);
     margin: 0 4% 1% 4%;
 }
 
