--- a/src/CSS/TeamStandings.css
+++ b/src/CSS/TeamStandings.css
@@ -22,9 +22,9 @@
     border-bottom: 1px solid var(--separator-color);
 }
 
-.Division-Container:focus-within{
+/* .Division-Container:focus-within{
     border: 1px solid grey;
-}
+} */
 
 .Standings-Table{
     height: max-content;
@@ -54,7 +54,7 @@
 .Standings-Data{
     /* min-width: 12%;
     max-width: 12%; */
-    width: 62px;
+    width: 15%;
     height: fit-content;
     display: flex;
     flex-direction: row;
@@ -68,7 +68,7 @@
     margin: 0% 0.5% 1.5% 0.5%;
     /* max-width: 15%; */
     /* min-width: 15%; */
-    width: 83px;
+    width: 17.5%;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -81,7 +81,7 @@
     margin: 0% 0.5% 1.5% 0.5%;
     /* min-width: 12%;
     max-width: 12%; */
-    width: 62px;
+    width: 15%;
     height: fit-content;
     display: flex;
     flex-direction: row;
@@ -94,7 +94,7 @@
     margin: 0% 0.5% 1.5% 0.5%;
     /* min-width: 15%;
     max-width: 15%; */
-    width: 83px;;
+    width: 17.5%;;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -181,6 +181,7 @@ table{
     border-bottom: 1px solid var(--separator-color);
     opacity: var(--text-opacity);
     padding-bottom: 1%;
+    font-size: clamp(0.8rem, 0.7286rem + 0.3571vw, 1.3rem);
 }
 .Legend-Title h4{
     float: left;
@@ -217,11 +218,11 @@ table{
     margin: 0%;
     color: var(--text-color);
     opacity: var(--text-opacity);
-    font-size: 12px;
+    font-size: clamp(0.5rem, 0.4214rem + 0.3929vw, 1.05rem);
     float: left;
 }
 
-@media screen and (min-width: 1600px){
+/* @media screen and (min-width: 1600px){
     .Standings-Data-Title{
         width: 72px;
         font-size: 1.25em;
@@ -246,4 +247,4 @@ table{
     .Standings-Data-Team{
         font-size: 1em;
     }
-}
+} */
