--- a/src/CSS/TeamSelector.css
+++ b/src/CSS/TeamSelector.css
@@ -1,6 +1,5 @@
 .logo{
-    /* clip-path: circle(); */
-    
+    outline:none;
     height: 100px;
     width: 100px;
     opacity: 25%;
@@ -29,9 +28,6 @@
     height: min-content;
 }
 
-/* .Team-Logo-Container:focus-within{
-    border: 1px solid grey;
-} */
 
 ::-webkit-scrollbar {
     width: 0px;
