--- a/src/CSS/NavBar.css
+++ b/src/CSS/NavBar.css
@@ -22,18 +22,20 @@
     justify-content:flex-end;
     align-items: center;
     padding-right: 5%;
-
+    outline: none;
 }
 
 .H2-Logo{
     margin-left: 5% ;
     color:var(--text-color);
     opacity: var(--text-opacity);
+    outline: none;
 }
 
 
 .Sunny-Icon, .Moon-Icon{
     cursor: pointer;
+    outline: none;
 }
 
 
