--- a/src/CSS/Instruction.css
+++ b/src/CSS/Instruction.css
@@ -59,9 +59,10 @@
         margin: 0 0 0 15%;
     }
 
-    .Instruction-Container-Mobile span{
+    .Instruction-Container-Mobile p{
         color: var(--instruction-color);
         font-size: 1.5em;
+        margin: 0;
     }
     .Instruction-Text-Div{
         width: 75vw;
