--- a/src/CSS/TeamSelector.css
+++ b/src/CSS/TeamSelector.css
@@ -3,6 +3,14 @@
     height: 100px;
     width: 100px;
     opacity: 25%;
+    background: none;
+    border: 0;
+}
+
+.logo img{
+    object-fit: cover;
+    height: inherit;
+    width: inherit;
 }
 
 .logo:focus{
